<resources>
    <string name="app_name">My_Dietist_Android_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_BMI">BMI</string>
    <string name="heightText">Height</string>
    <string name="genderText">Gender</string>
    <string name="maleRadio">Male</string>
    <string name="femaleRadio">Female</string>
    <string name="bmiText">bmi</string>
    <string name="menu_team">Our Team</string>
</resources>
